--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,5 +33,6 @@ jobs:
     - run: git config --global user.email "spiralspree@gmail.com"
     - run: git fetch --unshallow
     - run: git checkout master
+    - run: git reset --hard f29aeb4
     - run: git merge development
     - run: git push origin master
