--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,4 +35,4 @@ jobs:
     - run: git checkout master
     - run: git reset --hard f29aeb4
     - run: git merge development
-    - run: git push origin master
+    - run: git push origin master --force
