Remove --force option when pushing to master

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,4 +34,4 @@ jobs:
     - run: git fetch --unshallow
     - run: git checkout master
     - run: git merge development
-    - run: git push origin master --force
+    - run: git push origin master
